add header menu

--- a/golfhandicap/templates/golfhandicap/allplayers.html
+++ b/golfhandicap/templates/golfhandicap/allplayers.html
@@ -14,7 +14,7 @@
 
 {% endblock %}
 
-{% block title %}Golf Handicap{% endblock %}
+{% block title %}All Players{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
