--- a/templates/header.html
+++ b/templates/header.html
@@ -21,6 +21,19 @@
             <li><a href="/games/">Games</a></li>
           </ul>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Golf Links <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a target="_blank" href="http://www.thegolfchannel.com/">Golf Channel</a></li>
+            <li><a target="_blank" href="http://www.chappelle.ws/league/terminology.htm">Golf Terminology</a></li>
+            <li><a target="_blank" href="http://www.mgalinks.org/">Massachusetts Golf Association</a></li>
+            <li><a target="_blank" href="http://www.nepga.com/">New England PGA</a></li>
+            <li><a target="_blank" href="http://www.pga.com//">PGA of America</a></li>
+            <li><a target="_blank" href="http://www.pgatour.com/">PGA Tour</a></li>
+            <li><a target="_blank" href="http://www.usga.org/">USGA</a></li>
+            <li><a target="_blank" href="http://www.rulesofgolf.com/">USGA Rules of Golf</a></li>
+          </ul>
+        </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
