--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <li ><a href="/allplayers/">All Players</a></li>
         <li><a href="/games/">Games</a></li>
+        <li><a href="/golfhandicap/rules">Rules</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"> View <span class="caret"></span></a>
           <ul class="dropdown-menu">
